kubernetes/clusters/corfe/CLUSTER/ingress/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-dns-issuer
    ingress.cilium.io/tls-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.70ld.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd.70ld.dev
      secretName: argocd-server-tls
